--- a/src/AdminMainMenu.form
+++ b/src/AdminMainMenu.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="MainMenu">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="AdminMainMenu">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
@@ -19,36 +19,28 @@
           <text value="SmartPower Grid"/>
         </properties>
       </component>
-      <component id="c7966" class="javax.swing.JButton" binding="button1" default-binding="true">
+      <component id="c7966" class="javax.swing.JButton" binding="viewMetersButton" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="View Meters"/>
         </properties>
       </component>
-      <component id="d78bf" class="javax.swing.JButton" binding="button2" default-binding="true">
+      <component id="d78bf" class="javax.swing.JButton" binding="viewCustomersButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
+          <text value="View Customers"/>
         </properties>
       </component>
-      <component id="c2668" class="javax.swing.JButton" binding="button3" default-binding="true">
+      <component id="c2668" class="javax.swing.JButton" binding="viewTechniciansButton" default-binding="true">
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Button"/>
-        </properties>
-      </component>
-      <component id="f3eff" class="javax.swing.JButton" binding="button4" default-binding="true">
-        <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="Button"/>
+          <text value="View Technicians"/>
         </properties>
       </component>
     </children>
