--- a/src/LoginScreen.form
+++ b/src/LoginScreen.form
@@ -36,7 +36,7 @@
           <text value="Password:"/>
         </properties>
       </component>
-      <component id="12414" class="javax.swing.JPasswordField" binding="passwordField1" default-binding="true">
+      <component id="12414" class="javax.swing.JPasswordField" binding="password">
         <constraints>
           <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
@@ -44,7 +44,7 @@
         </constraints>
         <properties/>
       </component>
-      <component id="341b3" class="javax.swing.JTextField" binding="textField1" default-binding="true">
+      <component id="341b3" class="javax.swing.JTextField" binding="userName">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="150" height="-1"/>
