--- a/src/GUI/AdminMainMenu.form
+++ b/src/GUI/AdminMainMenu.form
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="TechnicianMainMenu">
-  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="3" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-    <margin top="0" left="0" bottom="0" right="0"/>
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="GUI.AdminMainMenu">
+  <grid id="27dc6" binding="rootPanel" layout-manager="GridLayoutManager" row-count="4" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+    <margin top="15" left="15" bottom="15" right="15"/>
     <constraints>
       <xy x="20" y="20" width="500" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="854ff" class="javax.swing.JLabel">
+      <component id="7a3f6" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
@@ -19,20 +19,28 @@
           <text value="SmartPower Grid"/>
         </properties>
       </component>
-      <component id="8b32c" class="javax.swing.JButton" binding="addMeterButton" default-binding="true">
+      <component id="c7966" class="javax.swing.JButton" binding="viewMetersButton" default-binding="true">
         <constraints>
           <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="Add Meter"/>
+          <text value="View Meters"/>
         </properties>
       </component>
-      <component id="d1e77" class="javax.swing.JButton" binding="viewMetersButton" default-binding="true">
+      <component id="d78bf" class="javax.swing.JButton" binding="viewCustomersButton" default-binding="true">
         <constraints>
           <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
-          <text value="View Meters"/>
+          <text value="View Customers"/>
+        </properties>
+      </component>
+      <component id="c2668" class="javax.swing.JButton" binding="viewTechniciansButton" default-binding="true">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="View Technicians"/>
         </properties>
       </component>
     </children>
